copertina intestata (si può togliere)

--- a/report/main.tex
+++ b/report/main.tex
@@ -35,7 +35,8 @@
 \begin{document}
 %\input{title.tex}
 
-\maketitle
+%\maketitle
+\input{title.tex}
 
 \section*{INTRODUZIONE}
 \input{chap/introduzione.tex}
