report più redeable

--- a/report/main.tex
+++ b/report/main.tex
@@ -41,19 +41,19 @@
 \section*{INTRODUZIONE}
 \input{chap/introduzione.tex}
 
-\newpage
+\clearpage
 \section*{PROBLEMA 25}
 \input{chap/pb25.tex}
 
-\newpage
+\clearpage
 \section*{PROBLEMA 75}
 \input{chap/pb75.tex}
 
-\newpage
+\clearpage
 \section*{PROBLEMA 76}
 \input{chap/pb76.tex}
 
-\newpage
+\clearpage
 \section*{CONCLUSIONI}
 \input{chap/conclusioni.tex}
 
