--- a/report/main.tex
+++ b/report/main.tex
@@ -38,23 +38,23 @@
 %\maketitle
 \input{title.tex}
 
-\section*{INTRODUZIONE}
+\section*{INTRODUCTION}
 \input{chap/introduzione.tex}
 
 \clearpage
-\section*{PROBLEMA 25}
+\section*{PROBLEM 25}
 \input{chap/pb25.tex}
 
 \clearpage
-\section*{PROBLEMA 75}
+\section*{PROBLEM 75}
 \input{chap/pb75.tex}
 
 \clearpage
-\section*{PROBLEMA 76}
+\section*{PROBLEM 76}
 \input{chap/pb76.tex}
 
 \clearpage
-\section*{CONCLUSIONI}
+\section*{CONCLUSION}
 \input{chap/conclusioni.tex}
 
 
