--- a/report/title.tex
+++ b/report/title.tex
@@ -8,6 +8,7 @@
     
      
     {\huge Report NO4LSCP}\\[1cm]
+    {\huge Assignment on Unconstrained Optimisation}\\[1cm]
     {\large Chiodo Martina - 343310 \\
     Vigè Sophie - 339268}
     
