--- a/report/main.tex
+++ b/report/main.tex
@@ -1,3 +1,4 @@
+
 \documentclass{article}
 
 % Language setting
@@ -40,6 +41,13 @@
 
 \section*{INTRODUCTION}
 \input{chap/introduzione.tex}
+
+\clearpage
+\section*{ROSENBROCK FUNCTION}
+\input{chap/es2.tex}
+
+\clearpage
+C'E' SCRITTO DI METTERE ANCHE UNA BRIEF DESCRIPTION OF THE METHODS
 
 \clearpage
 \section*{PROBLEM 25}
