--- a/report/main.tex
+++ b/report/main.tex
@@ -65,6 +65,10 @@ C'E' SCRITTO DI METTERE ANCHE UNA BRIEF DESCRIPTION OF THE METHODS
 \section*{CONCLUSION}
 \input{chap/conclusioni.tex}
 
+\clearpage
+\section*{APPENDIX}
+\input{chap/appendice.tex}
+
 
 
 \end{document}
